# HouseSpending

./: .gitignore  IMPLEMENTATION_PLAN (2).md  README.md  TECHNICAL_BRIEF.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
docs/: deployment.md
pages/: 01_quick_add.py  02_upload.py  03_review_queue.py  04_transactions.py  05_subscriptions.py  06_budgets.py  07_goals.py  08_settings.py
sql/: README.md
src/: audit.py  auth.py  budgets.py  db.py  export.py  fx.py  goals.py  models.py  subscriptions.py
src/categorization/: llm_categorizer.py  merchant_cache.py  normalizer.py
src/extraction/: claude_extractor.py  pdf_to_images.py  prompts.py
tests/: test_smoke.py
